@@ -23,6 +23,15 @@
 !CLEAR
 !LSHIFT 1 3
 !RSHIFT 6 4
+
+# Tab = CTRL
+Tab 0 2 8
+# Shift + Tab = CTRL
+ISO_Left_Tab 0 2 8
+
+# Control_L = CBM
+Control_L 0 5 8
+
 Delete 7 0 8
 Return 7 1 8
 Right 7 2 8
@@ -83,11 +92,8 @@ asciitilde 6 6 0
 slash 6 3 0
 1 0 0 0
 underscore 0 1 0
-Control_L 0 2 8
 2 0 7 0
 space 0 4 8
-Alt_L 0 5 8
-Meta_L 0 5 8
 q 0 6 8
 Escape 0 3 8
 Help 0 3 8
